--- a/aluramidi-curso-aula4/css/estilos.css
+++ b/aluramidi-curso-aula4/css/estilos.css
@@ -1,14 +1,14 @@
 :root {
   --cinza: #aaa;
-  --vermelha: #e93d50;
-  --vermelha-escura: #af303f;
-  --branca: #fff;
-  --luz: rgb(229, 255, 0);
+  --vermelha: #000000;
+  --vermelha-escura: #87CEFA;
+  --branca: #6be9ffbe;
+  --luz: #708090(229, 255, 0);
 }
 
 body {
   align-items: center;
-  background: linear-gradient(45deg, #a7cfdf 0%,#23538a 100%);
+  background: linear-gradient(45deg,#002bac 0%, #87CEFA 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -64,4 +64,8 @@ h1 {
 .tecla.active:focus,
 .tecla:active:focus {
   box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
+}
+
+.titulo{
+  color: #000000;
 }
