--- a/aluramidi-curso-aula4/css/estilos.css
+++ b/aluramidi-curso-aula4/css/estilos.css
@@ -1,14 +1,14 @@
 :root {
   --cinza: #aaa;
   --vermelha: #000000;
-  --vermelha-escura: #87CEFA;
-  --branca: #6be9ffbe;
+  --vermelha-escura: #d4463c;
+  --branca: #d4463c;
   --luz: #708090(229, 255, 0);
 }
 
 body {
   align-items: center;
-  background: linear-gradient(45deg,#002bac 0%, #87CEFA 100%);
+  background: linear-gradient(45deg,#6b0000 0%, #ffadad 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
