--- a/aluramidi-curso-aula4/css/estilos.css
+++ b/aluramidi-curso-aula4/css/estilos.css
@@ -1,14 +1,14 @@
 :root {
-  --cinza: #aaa;
+  --cinza: #000000;
   --vermelha: #000000;
   --vermelha-escura: #d4463c;
-  --branca: #d4463c;
-  --luz: #708090(229, 255, 0);
+  --branca: #910909d0;
+  --luz: #A0522D(229, 255, 0);
 }
 
 body {
   align-items: center;
-  background: linear-gradient(45deg,#6b0000 0%, #ffadad 100%);
+  background: linear-gradient(45deg, #c90606d2 0%, #000000ef 100%);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -23,8 +23,8 @@ h1 {
 }
 
 .teclado {
-  background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
-  box-shadow: 6px 8px 0 6px #666, 10px 10px 10px #000;
+  background: linear-gradient(to bottom, 	#A9A9A9 0%,#ffffff 100%);
+  box-shadow: 6px 8px 0 6px #000000, 10px 10px 10px #000;
   border-radius: 30px;
   display: grid;
   gap: 10px;
@@ -67,5 +67,5 @@ h1 {
 }
 
 .titulo{
-  color: #000000;
+  color: #000000a8;
 }
